fix: scroll overflow of navbar and dropdown

--- a/content/css/jenkins.css
+++ b/content/css/jenkins.css
@@ -1490,7 +1490,9 @@ table.syntax > tbody > tr > th {
   .navbar.navbar-expand-lg .nav-link.btn {
     color: rgba(255, 255, 255, 0.75); }
   .navbar.navbar-expand-lg .dropdown-menu {
-    font-size: 0.875rem; }
+    font-size: 0.875rem; 
+    max-height: 80vh;
+    overflow-y: auto; }
   .navbar-toggler-icon {
     font-size: 0.8em; }
 
@@ -1704,6 +1706,10 @@ table.syntax > tbody > tr > th {
     - For better UI/UX in mobile resolutions.
 */
 @media (max-width : 991px) {
+  .navbar{
+    max-height: 70vh;
+    overflow-y: auto;
+  }
   /* search box container */
   .nav-item.searchbox {
     width: 100%;
